deployments/ts3-ukranian/00mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts3-ukranian
  namespace: ts3-ukranian
spec:
  selector:
    matchLabels:
      app: ts3-ukranian
  replicas: 1
  template:
    metadata:
      labels:
        app: ts3-ukranian
    spec:
      containers:
        - name: mariadb-ts3-ukranian
          image: mariadb:11.2.2-jammy
          ports:
            - containerPort: 3306 # MariaDB
      restartPolicy: Always
