deployments/ts3-ukranian/00ts3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts3-ukranian
  namespace: ts3-ukranian
spec:
  selector:
    matchLabels:
      app: ts3-ukranian
  replicas: 1
  template:
    metadata:
      labels:
        app: ts3-ukranian
    spec:
      containers:
        - name: ts3-ukranian
          image: teamspeak:3.13.7
          ports:
            - containerPort: 9987 # Voice
            - containerPort: 30033 # FileTransfer
          volumeMounts:
            - name: ts3-ukranian
              mountPath: /var/ts3-ukranian

      volumes:
        - name: ts3-ukranian
          persistentVolumeClaim:
            claimName: ts3-ukranian-pvc
      restartPolicy: Always
