deployments/ts3-ukranian/02service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-ukranian
spec:
  selector:
    app: mariadb-ukranian
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: ts3-ukranian
  namespace: ts3-ukranian
spec:
  selector:
    app: ts3-ukranian
  ports:
    - protocol: UDP
      port: 9987
      targetPort: 9987
      name: voice
    - protocol: TCP
      port: 30033
      targetPort: 30033
      name: filetransfer
