deployments/ts3-ukranian/03ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ts3-ingress-tcp
  namespace: ts3-ukranian
spec:
  entryPoints:
    - ts3filetransfer
  routes:
    - match: HostSNI(`*`)
      services:
        - name: ts3-ukranian
          port: 30033
